DMP-3889: Add logging for CloseOldCasesProcessorImpl job